<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:background="@color/gray">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_one"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_one"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_two"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_two"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_three"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_three"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_four"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_four"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_five"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_five"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_six"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_six"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_seven"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_seven"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_eight"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_eight"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_faq_ask_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_ask_nine"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textStyle="bold"
                    android:padding="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"/>

                <TextView
                    android:id="@+id/txt_faq_answer_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_answer_nine"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:padding="16dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>